--- a/index.html
+++ b/index.html
@@ -1,1 +1,30 @@
 
+<!DOCTYPE html>
+<html lang="es">
+<head>
+<meta charset="UTF-8">
+<title>I CARLY</title>
+</head>
+<body>
+  <h1> INFORMACION DE LA MEJOR SERIE DEL MUNDO</h1>
+  <p>iCarly es una serie de comedia de situación juvenil de Nickelodeon que se emitió originalmente de 2007 a 2012 y se relanzó en 2021. La trama sigue a la adolescente Carly Shay, quien crea un exitoso programa web de comedia con sus mejores amigos. 
+La serie se centra en el desafío de los personajes para equilibrar la fama en internet con los problemas típicos de la adolescencia, como la escuela, las amistades y las relaciones amorosas.<br>
+<img src="https://es.web.img3.acsta.net/pictures/14/01/29/13/46/286688.jpg" alt="icarly">
+  
+ Razones para ver la serie original (2007-2012)
+Comedia hilarante y personajes memorables: La serie es reconocida por su humor tonto, ingenioso y, a menudo, absurdo. Personajes como la mordaz Sam, el patoso pero simpático Freddie, y el excéntrico artista Spencer, hacen que la dinámica sea muy divertida.<br>
+Contenido familiar: Al ser un producto de Nickelodeon, la serie es ideal para ver en familia. Transmite lecciones de vida positivas sobre la amistad, la responsabilidad y la creatividad, aunque de manera ligera y entretenida.
+Curiosidad por el origen: Si te interesa saber cómo era el mundo de las celebridades de internet antes de la era de YouTube y TikTok, iCarly ofrece un vistazo interesante y, en retrospectiva, profético.
+Formato nostálgico: Para quienes crecieron en la década de los 2000, la serie es un viaje directo a la nostalgia, con referencias a la tecnología y la cultura pop de esa época. Es una forma de revivir una parte de tu infancia o adolescencia. 
+  Razones para ver el relanzamiento (2021-2023)
+Tono más maduro y humor para adultos: El reboot está diseñado para los fans originales que ya han crecido. El humor es más adulto, con chistes y referencias a temas más maduros, incluyendo alcohol, relaciones y malas palabras.
+Continuación de la historia: Si te quedaste con ganas de saber qué pasó con los personajes, el relanzamiento retoma sus vidas 10 años después, mostrando cómo han evolucionado y cuáles son sus nuevos desafíos.
+Enfoque moderno en la fama: La nueva serie explora las complicaciones de ser una celebridad de internet en la era moderna, con sus altibajos, el escrutinio del público y la presión por mantenerse relevante.
+Resolución de la trama romántica (en parte): Aunque la serie fue cancelada de forma abrupta, los fans que esperaban ver el desarrollo de la relación entre Carly y Freddie (conocida como "Creddie") finalmente ven un progreso importante, con un compromiso de por medio antes del final.</p>Serie original (2007-2012)
+Carly Shay (Miranda Cosgrove): Es la protagonista y presentadora del programa web iCarly. Es la más sensata y responsable del grupo, aunque a veces toma el blame por las travesuras de su mejor amiga Sam. A lo largo de la serie, demuestra ser una amiga leal y solidaria que actúa como mediadora en las peleas entre Sam y Freddie. En el final de la serie original, se muda a Italia con su padre, un militar, después de un beso de despedida con Freddie que deja a los espectadores preguntándose sobre su futuro.
+Sam Puckett (Jennette McCurdy): La copresentadora de iCarly, es rebelde, agresiva y sarcástica. Siempre está buscando problemas y no le gusta la autoridad, aunque en el fondo se preocupa por sus amigos. Le encanta burlarse de Freddie, pero también se ha demostrado que lo defiende. Se da a entender que tiene una vida familiar difícil, lo que influye en su comportamiento. En el relanzamiento, se menciona que se unió a una banda de motociclistas.
+Freddie Benson (Nathan Kress): El productor técnico de iCarly y vecino de Carly. Es inteligente y un poco torpe, y tiene una fascinación por la tecnología y la ciencia ficción. Al principio de la serie, está enamorado de Carly, pero su relación evoluciona. A menudo es el blanco de las burlas de Sam, aunque su relación es compleja y a veces parecen amigos. A pesar de los abusos, se mantiene leal a sus amigos.
+Spencer Shay (Jerry Trainor): El excéntrico hermano mayor y tutor legal de Carly. Es un artista poco convencional que crea esculturas extrañas y a menudo se distrae fácilmente. A pesar de su rareza, es un tutor responsable y protector de su hermana. En el relanzamiento, se convierte en millonario por accidente y sigue siendo excéntrico.
+Gibby Gibson (Noah Munck): Un compañero de escuela que se convierte en amigo y personaje recurrente de iCarly, uniéndose al elenco principal en temporadas posteriores. Es conocido por su personalidad excéntrica y por quitarse la camiseta sin motivo aparente. Con el tiempo, madura y se quita la camisa con menos frecuencia.
+  </body>
+</html>
